--- a/main.css
+++ b/main.css
@@ -21,6 +21,8 @@ main {
   padding: 10px;
   width: 2000px;
   background-color: grey;
+  border-radius: 10px;
+  /* z-index: -2; */
 }
 
 .infoBar {
@@ -38,6 +40,13 @@ main {
   background-color: black;
   border-radius: 5px;
 }
+
+
+.infoText2 {
+  margin-top: 10px;
+  width: 800px;
+}
+
 
 .upperSection {
   flex-grow: 6;
@@ -58,7 +67,7 @@ main {
   width: 200px;
   padding: 5px;
   border-radius: 2px;
-  margin: 0px 225px;
+  margin: 0px 210px;
 }
 
 .lowerSection {
@@ -85,12 +94,44 @@ main {
 }
 
 #grid2 {
+  background: transparent;
+  z-index: 2;
   /* background-color: black; */
   /* background-image: url('./images/radarBackground.png'); */
+  /* background-image: url('./images/radar2.png');
+  background-size: cover;
+  border-radius: 50px; */
+  /* opacity: 0.7; */
+  /* animation: rotation 2s infinite linear; */
+}
+
+#grid2Background {
+  position: absolute;
+  width: 600px;
+  height: 600px;
   background-image: url('./images/radar2.png');
   background-size: cover;
+  border-radius: 300px;
+  z-index: -1;
+  animation: rotation 15s infinite linear;
+}
+
+#grid2Background2 {
+  position: absolute;
+  width: 600px;
+  height: 600px;
+  background-color: rgb(6, 1, 102);
   border-radius: 50px;
-  /* opacity: 0.7; */
+  z-index: -2;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
 
 .zAxisOff {
@@ -103,7 +144,7 @@ main {
 }
 
 .zAxisOn {
-  z-index: 1;
+  z-index: 3;
 }
 
 .cell {
@@ -375,8 +416,12 @@ aside {
 }
 
 .hit {
-  background-color: orange;
-  background-image: none;
+  /* background-color: orange; */
+  width: 60px;
+  height: 60px;
+  background-image: url('./images/hit.png');
+  background-size: cover;
+  z-index: 2;
 }
 
 .miss {
