--- a/main.css
+++ b/main.css
@@ -57,6 +57,7 @@ main {
 .middleSection {
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
 }
 
 .boardNames {
@@ -72,14 +73,48 @@ main {
 
 .lowerSection {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.leftButtons, .rightButtons {
+  display: flex;
+  flex-direction: column;
 }
 
 .buttonContainer {
-  /* display: flex; */
-  /* flex-direction: row; */
+  display: flex;
+  flex-direction: row;
   /* align-items: center; */
+  justify-content: space-between;
+  align-items: center;
+  /* background: white; */
+  border: 3px solid grey;
+  border-radius: 15px;
+  text-align: left;
+  font-size: 34px;
   width: 500px;
-  margin: 50px auto;
+  margin: 10px auto;
+}
+
+.buttonText {
+  width: 500px;
+  height: 50px;
+  background: rgb(252, 255, 237);
+  margin-left: 75px;
+  border-radius: 6px;
+  padding-left: 20px;
+  padding-top: 7px;
+}
+
+button {
+  background: rgb(158, 0, 0);
+  border: 2px solid grey;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
 }
 
 .grid {
@@ -429,5 +464,3 @@ aside {
   background-image: url('./images/missTile1.png');
   background-size: cover;
 }
-
-
