--- a/main.css
+++ b/main.css
@@ -17,16 +17,71 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px;
-  padding: 10px;
+  margin: 5px;
+  padding: 0px;
   width: 2000px;
   background-color: grey;
   border-radius: 10px;
   /* z-index: -2; */
 }
 
+.menuScreen {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 1900px;
+  height: 1050px;
+  background: rgb(177, 0, 0);
+  z-index: 6;
+  position: absolute;
+  transition: 1300ms;
+  transition-timing-function: ease-in-out;
+  border: 10px solid orange;
+  border-radius: 0px 0px 50px 50px;
+}
+
+.logo {
+  background-color: black;
+  width: 400px;
+  height: 400px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  transition: 500ms;
+}
+
+.menuButton {
+  font-size: 25px;
+  color: orange;
+  text-align: center;
+  width: 250px;
+  height: 50px;
+  margin-top: 0px;
+  border: 5px solid orange;
+  border-radius: 10px;
+  transition: 500ms;
+}
+
+.hidden {
+  display: none;
+  transition: 500ms;
+}
+
+.stars {
+  width: 100px;
+  border-radius: 50px;
+  margin: 0px 300px;
+}
+
+.topSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
 .infoBar {
-  margin: 20px auto;
+  margin: 0px auto 40px;
   background-color: black;
 }
 
@@ -44,9 +99,9 @@ main {
 
 .infoText2 {
   margin-top: 10px;
+  margin-bottom: 0px;
   width: 800px;
 }
-
 
 .upperSection {
   flex-grow: 6;
@@ -57,7 +112,7 @@ main {
 .middleSection {
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .boardNames {
@@ -257,14 +312,16 @@ aside {
 }
 
 .leftAside, .rightAside {
-  background-color: navy;
+  /* background-color: navy; */
+  background-color: rgb(177, 0, 0);
   color: lime;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 200px;
-  border-radius: 3px;
+  border: 5px solid orange;
+  border-radius: 10px;
 }
 
 .light {
